[gd_scene load_steps=12 format=2]

[ext_resource path="res://5. User Interfaces/Textures/Window/512_256/window.png" type="Texture" id=1]
[ext_resource path="res://5. User Interfaces/Level Map/Level Map.gd" type="Script" id=2]
[ext_resource path="res://5. User Interfaces/Level Map/Level Select Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://5. User Interfaces/PixelMechaBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://5. User Interfaces/Light Purple Outlined.tres" type="DynamicFont" id=5]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x64/button_over.png" type="Texture" id=6]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x64/button_default.png" type="Texture" id=7]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x64/button_down.png" type="Texture" id=8]
[ext_resource path="res://5. User Interfaces/Textures/Buttons/128x64/button_disabled.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Level Map" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
base_button = ExtResource( 3 )
total_levels = 2
grid = NodePath("ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/Button Grid")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 479.0
margin_bottom = 232.0
color = Color( 0.443137, 0.396078, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect"]
margin_right = 519.0
margin_bottom = 272.0
rect_min_size = Vector2( 519, 272 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_right = 519.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 0

[node name="Control2" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 24.0
margin_right = 519.0
margin_bottom = 54.0
rect_min_size = Vector2( 519, 30 )

[node name="Title Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.816042, 1, 0.128906, 1 )
text = "Level Select"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 58.0
margin_right = 519.0
margin_bottom = 88.0
rect_min_size = Vector2( 519, 30 )

[node name="Chapter Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/Control3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -9.5
margin_right = 46.5
margin_bottom = 9.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.913725, 1, 0.584314, 1 )
text = "1. The Chase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 92.0
margin_right = 519.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 255.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button Grid" type="GridContainer" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 259.0
margin_right = 259.0
margin_bottom = 34.0
custom_constants/hseparation = 0

[node name="Control2" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 263.0
margin_right = 519.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control4" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 130.0
margin_right = 519.0
margin_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 169.0
margin_right = 519.0
margin_bottom = 233.0

[node name="Control6" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back Button" type="TextureButton" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_right = 214.0
margin_bottom = 64.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 6 )

[node name="Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Back Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.827451, 0.627451, 1, 1 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control7" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 218.0
margin_right = 300.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Exit Button" type="TextureButton" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 304.0
margin_right = 432.0
margin_bottom = 64.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 6 )

[node name="Label" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Exit Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -9.5
margin_right = 37.5
margin_bottom = 9.5
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.827451, 0.627451, 1, 1 )
text = "Exit Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control8" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 436.0
margin_right = 519.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control5" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 237.0
margin_right = 519.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Back Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer2/Exit Button" to="." method="_on_Exit_Button_pressed"]
